--- a/ec_rent.html
+++ b/ec_rent.html
@@ -3,25 +3,25 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>EasyCharge - M</title>
+        <title>EasyCharge - Mantenete conectado</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
-    <body>
+    <body class="rent_section">
 
       <header>
         <div class="container">
           <nav id="menu">
             <ul>
-              <li class="logo"><a href="#inicio"><img src="img/logo-battery-white.svg" alt=""></a></li>
-              <li><a href="#cargador">¿Quienes somos?</a></li>
-              <li><a href="ec_show.html">EC-SHOW</a></li>
-              <li><a href="ec_rent.html">EC-RENT</a></li>
+              <li class="logo"><a href="index.html"><img src="img/logo-battery-white.svg" alt=""></a></li>
+              <li><a href="index.html#easycharge">¿Quienes somos?</a></li>
+              <li><a href="ec_show.html">SHOW</a></li>
+              <li><a href="ec_rent.html">RENT</a></li>
               <li><a href="anunciate.html">Anunciate</a></li>
-              <li><a href="#mapa">Encontranos</a></li>
+              <li><a href="index.html#encuentranos">Encontranos</a></li>
               <li><a href="#contacto">Contactanos</a></li>
             </ul>
           </nav>
@@ -38,7 +38,7 @@
                     <span>EASY CHARGE RENT</span>
                   </h1>
                   <div class="cont_btn">
-                    <a href="#" class="btn">Conoce más</a>
+                    <a href="#primer_contenido" class="btn">Conoce más</a>
                   </div>
                 </div>
                 <div class="img">
@@ -54,7 +54,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="primer_contenido">
         <div class="container">
           <div class="col-md-12">
             <div class="quote_text">
@@ -72,6 +72,9 @@
               <div class="flex_item">
                 <figure class="tech_item">
                   <figcaption>
+                    <div class="number logo_circulo">
+                      1
+                    </div>
                     <p>Diferenciarse de la competencia es lo que permite sobresalir a los establecimientos. Easy Charge llegó para ayudar a ello.</p>
                   </figcaption>
                 </figure>
@@ -80,6 +83,9 @@
               <div class="flex_item">
                 <figure class="tech_item">
                   <figcaption>
+                    <div class="number logo_circulo">
+                      2
+                    </div>
                     <p>Además de ofrecer la practicidad de un cargador portátil de celulares puedes usar Easy Charge para exhibir a tus clientes menús, promociones, ofertas o hasta publicidades que aumenten tu facturación.</p>
                   </figcaption>
                 </figure>
@@ -88,6 +94,9 @@
               <div class="flex_item">
                 <figure class="tech_item">
                   <figcaption>
+                    <div class="number logo_circulo">
+                      3
+                    </div>
                     <p>Las personas cada vez están más preocupadas de no quedarse sin batería, todos quieren conectarse a las redes sociales, buscar información y compartir fotos.</p>
                   </figcaption>
                 </figure>
@@ -95,6 +104,9 @@
               <div class="flex_item">
                 <figure class="tech_item">
                   <figcaption>
+                    <div class="number logo_circulo">
+                      4
+                    </div>
                     <p>Tu puedes brindar solución a este problema para la alegría de tus clientes con la ayuda de Easy Charge, brindando un servicio único en el mercado.</p>
                   </figcaption>
                 </figure>
@@ -105,19 +117,18 @@
         </div>
       </section>
 
-
       <section id="easycharge">
         <div class="container">
-          <div class="flex_content_doble easycharge">
+          <div class="flex_content_doble easycharge contact_easycharge gradiant">
             <div class="right">
               <div class="logo_circulo">
                 <img src="img/logo-full.svg" alt="">
               </div>
             </div>
             <div class="left">
-              <h2>Para más información</h2>
+              <h2>Anuncia con nosotros</h2>
               <div class="cont_btn">
-                <a href="#" class="btn">Contactanos</a>
+                <a href="#contacto" class="btn">Contactanos</a>
               </div>
             </div>
           </div>
@@ -133,8 +144,7 @@
             <div class="flex_item">
               <div class="flex_formulario">
                 <div class="right">
-                  <form action="#">
-                    <h3>Contactanos</h3>
+                  <form action="mail.php">                    <h3>Contactanos</h3>
                     <div class="form-group">
                       <input type="text" class="form-control" id="name" placeholder="Nombre">
                     </div>
