--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>EasyCharge - M</title>
+        <title>EasyCharge - Mantenete conectado</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
-    <body>
+    <body class="index_section">
 
       <header>
         <div class="container">
           <nav id="menu">
             <ul>
-              <li class="logo"><a href="#inicio"><img src="img/logo-battery-white.svg" alt=""></a></li>
-              <li><a href="#cargador">¿Quienes somos?</a></li>
-              <li><a href="ec_show.html">EC-SHOW</a></li>
-              <li><a href="ec_rent.html">EC-RENT</a></li>
+              <li class="logo"><a href="index.html"><img src="img/logo-battery-white.svg" alt=""></a></li>
+              <li><a href="#easycharge">¿Quienes somos?</a></li>
+              <li><a href="ec_show.html">SHOW</a></li>
+              <li><a href="ec_rent.html">RENT</a></li>
               <li><a href="anunciate.html">Anunciate</a></li>
-              <li><a href="#mapa">Encontranos</a></li>
+              <li><a href="#encuentranos">Encontranos</a></li>
               <li><a href="#contacto">Contactanos</a></li>
             </ul>
           </nav>
@@ -154,29 +154,52 @@
                   <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
                 </div>
                 <div class="flex_item">
-                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
+                  <figure><img src="img/gallery/photo_2.jpg" class="img-responsive" alt=""></figure>
                 </div>
                 <div class="flex_item">
-                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
+                  <figure><img src="img/gallery/photo_4.jpg" class="img-responsive" alt=""></figure>
                 </div>
                 <div class="flex_item">
-                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
-                </div>
-                <div class="flex_item">
-                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
-                </div>
-                <div class="flex_item">
-                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
-                </div>
-                <div class="flex_item">
-                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
-                </div>
-                <div class="flex_item">
-                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
+                  <figure><img src="img/gallery/photo_3.jpg" class="img-responsive" alt=""></figure>
                 </div>
               </div>
             </div>
 
+          </div>
+        </div>
+      </section>
+
+      <section id="encuentranos">
+        <div class="slider separator_bottom separator_top ">
+          <div class="gradiant">
+            <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
+          </div>
+          <div class="flex_center">
+            <div class="flex_item">
+              <div class="text_center_slider ">
+                <div class="img">
+                  <img src="img/iphone_charging.png" class="img-responsive" alt="">
+                </div>
+                <div class="txt">                  
+                  <h1>
+                    Encuentra nuestros puntos de carga 
+                    <br>
+                    EasyCharge
+                  </h1>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="col-md-12">
+            <div class="cont_map">
+              <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13085.099296879598!2d-56.16772330784963!3d-34.92464388604025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f819e0be26dff%3A0x5721a12a2943bc00!2sPunta+Carretas%2C+Montevideo!5e0!3m2!1ses-419!2suy!4v1495585762275" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -190,7 +213,7 @@
             <div class="flex_item">
               <div class="flex_formulario">
                 <div class="right">
-                  <form action="#">
+                  <form action="mail.php">
                     <h3>Contactanos</h3>
                     <div class="form-group">
                       <input type="text" class="form-control" id="name" placeholder="Nombre">
