--- a/ec_show.html
+++ b/ec_show.html
@@ -180,7 +180,8 @@
             <div class="flex_item">
               <div class="flex_formulario">
                 <div class="right">
-                  <form action="mail.php">                    <h3>Contactanos</h3>
+                  <form>
+                    <h3>Contactanos</h3>
                     <div class="form-group">
                       <input type="text" class="form-control" id="name" placeholder="Nombre">
                     </div>
@@ -192,6 +193,9 @@
                     </div>
                     <div class="form-group">
                       <textarea class="form-control" id="comment" rows="3" placeholder="Comentarios"></textarea>
+                    </div>
+                    <div class="form-group">
+                      <div class="g-recaptcha" data-sitekey="6Lc1MiUUAAAAAHfSrItQh93qMGrvd48pYmKprRQX"></div>
                     </div>
                     <div class="form-group">
                       <button type="submit" class="btn">Enviar</button>
