--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/responsive.css">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
     <body class="index_section">
 
@@ -213,7 +215,7 @@
             <div class="flex_item">
               <div class="flex_formulario">
                 <div class="right">
-                  <form action="mail.php">
+                  <form>
                     <h3>Contactanos</h3>
                     <div class="form-group">
                       <input type="text" class="form-control" id="name" placeholder="Nombre">
@@ -226,6 +228,9 @@
                     </div>
                     <div class="form-group">
                       <textarea class="form-control" id="comment" rows="3" placeholder="Comentarios"></textarea>
+                    </div>
+                    <div class="form-group">
+                      <div class="g-recaptcha" data-sitekey="6Lc1MiUUAAAAAHfSrItQh93qMGrvd48pYmKprRQX"></div>
                     </div>
                     <div class="form-group">
                       <button type="submit" class="btn">Enviar</button>
