--- a/anunciate.html
+++ b/anunciate.html
@@ -174,16 +174,16 @@
                   <form>
                     <h3>Contactanos</h3>
                     <div class="form-group">
-                      <input type="text" class="form-control" id="name" placeholder="Nombre">
+                      <input type="text" class="form-control" id="name" placeholder="Nombre" required >
                     </div>
                     <div class="form-group">
-                      <input type="text" class="form-control" id="phone" placeholder="Teléfono">
+                      <input type="text" class="form-control" id="phone" placeholder="Teléfono" required >
                     </div>
                     <div class="form-group">
-                      <input type="email" class="form-control" id="mail" placeholder="Email">
+                      <input type="email" class="form-control" id="mail" placeholder="Email" required >
                     </div>
                     <div class="form-group">
-                      <textarea class="form-control" id="comment" rows="3" placeholder="Comentarios"></textarea>
+                      <textarea class="form-control" id="comment" rows="3" placeholder="Comentarios" required ></textarea>
                     </div>
                     <div class="form-group">
                       <div class="g-recaptcha" data-sitekey="6Lc1MiUUAAAAAHfSrItQh93qMGrvd48pYmKprRQX"></div>
