--- a/anunciate.html
+++ b/anunciate.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
     <body class="anunciate_section">
 
@@ -58,7 +59,10 @@
         <div class="container">
           <div class="col-md-12">
             <p class="quote_text">
-              Easy Charge es un dispositivo moderno y práctico donde publicitar tu marca.
+              Easy Charge es un dispositivo moderno y práctico donde publicitar.
+              <br>
+              <br>
+              Tu marca, producto y/o servicio se exibirá en bares, restaurantes, centros de estética, gimnasios y otros establecimientos de primer nivel en el Uruguay.
               <br>
               <br>
               Anunciar en Easy Charge es colocar tu marca en una experiencia memorable y llamativa para el público.
@@ -101,7 +105,13 @@
                 </figure>
               </div>
             </div>
-            <p class="quote_text">¿Como funciona?, Anunciar en EasyCharge es sencillo y rápido, solo tienes que llenar el formulario y le responderemos a la brevedad. </p>
+            <!-- HACER PASOS -->
+            <p class="quote_text">
+              ¿Como funciona?
+              <br>
+              <br>
+              Anunciar en EasyCharge es sencillo y rápido, solo tienes que llenar el formulario y le responderemos a la brevedad.
+              </p>
 
           </div>
         </div>
@@ -191,6 +201,13 @@
                     <div class="form-group">
                       <button type="submit" class="btn">Enviar</button>
                     </div>
+                    <div class="messgmodal">
+                      <div class="flex">
+                        <div class="flex_item">
+                          <div class="spinner"></div>
+                        </div>
+                      </div>
+                    </div>
                   </form>
                 </div>
                 <div class="left">
@@ -198,7 +215,7 @@
                   <ul class="direccion">
                     <li>
                       <b>Dirección:</b>
-                      Blanca del Tabaré 2945 Apto 602
+                      Blanca del Tabaré 2945
                     </li>
                     <li>
                       <b>Teléfono:</b>
