--- a/ec_rent.html
+++ b/ec_rent.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
     <body class="rent_section">
 
@@ -126,7 +127,8 @@
               </div>
             </div>
             <div class="left">
-              <h2>Anuncia con nosotros</h2>
+              <h2>¿Queres formar parte de nuestra alianza?</h2>
+              <p>Si tenes un restaurante, bar, centro de estética, gimnasio o establecimiento en donde tus clientes necesiten cargar sus celulares y dispositivos moviles contáctanos y disfruta de la experiencia única de Easy Charge.</p>
               <div class="cont_btn">
                 <a href="#contacto" class="btn">Contactanos</a>
               </div>
@@ -164,6 +166,13 @@
                     <div class="form-group">
                       <button type="submit" class="btn">Enviar</button>
                     </div>
+                    <div class="messgmodal">
+                      <div class="flex">
+                        <div class="flex_item">
+                          <div class="spinner"></div>
+                        </div>
+                      </div>
+                    </div>
                   </form>
                 </div>
                 <div class="left">
@@ -171,7 +180,7 @@
                   <ul class="direccion">
                     <li>
                       <b>Dirección:</b>
-                      Blanca del Tabaré 2945 Apto 602
+                      Blanca del Tabaré 2945
                     </li>
                     <li>
                       <b>Teléfono:</b>
