--- a/ec_show.html
+++ b/ec_show.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
     <body class="show_section">
 
@@ -65,17 +66,18 @@
         </div>
       </section>
 
-      <section id="cargador">
+      <section id="cargador" >
         <div class="container">
           <div class="col-md-12">
             <div class="text-center">
               <h2>¿Por qué tener Easy Charge en tu establecimiento?</h2>
             </div>
-            <div class="flex_container_description">
+            <div class="flex_container_description" style="margin:100px 0">
 
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
                   <figcaption>
+                    <div class="number logo_circulo">1</div>
                     <p>Satisface la necesidad de los clientes de que sus teléfonos celulares y dispositivos móviles se mantengan con carga.</p>
                   </figcaption>
                 </figure>
@@ -84,6 +86,7 @@
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
                   <figcaption>
+                    <div class="number logo_circulo">2</div>
                     <p>Significa un valor agregado para tu negocio, diferenciándolo de la competencia y atrayendo clientela a tu establecimiento.</p>
                   </figcaption>
                 </figure>
@@ -92,6 +95,7 @@
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
                   <figcaption>
+                    <div class="number logo_circulo">3</div>
                     <p>Es una vía de comunicación para exhibir todo tipo de contenidos.</p>
                   </figcaption>
                 </figure>
@@ -111,7 +115,7 @@
                 <figure class="tech_item" id="eight_gagdet">
                   <img src="img/icon/logo/lisa_burges.jpg" alt="">
                   <figcaption>
-                    <h2>Lisa Burges & Drinks</h2>
+                    <h2>Lisa Burgers & Drinks</h2>
                     <p>Rambla Pte. Wilson esquina Sarmiento</p>
                   </figcaption>
                 </figure>
@@ -200,6 +204,13 @@
                     <div class="form-group">
                       <button type="submit" class="btn">Enviar</button>
                     </div>
+                    <div class="messgmodal">
+                      <div class="flex">
+                        <div class="flex_item">
+                          <div class="spinner"></div>
+                        </div>
+                      </div>
+                    </div>
                   </form>
                 </div>
                 <div class="left">
@@ -207,7 +218,7 @@
                   <ul class="direccion">
                     <li>
                       <b>Dirección:</b>
-                      Blanca del Tabaré 2945 Apto 602
+                      Blanca del Tabaré 2945
                     </li>
                     <li>
                       <b>Teléfono:</b>
