--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <p>Imaginate estar disfrutando una linda reunión entre amigos y en el momento de sacarse una fotografía para retratar el momento te quedas sin batería en el celular.</p>
               <p>Piensa estar tomando un café mientras esperas esa importante llamada de negocios y que tu teléfono se quede sin carga.</p>
               <p>¿A quíen no le ha pasado estas situaciones?, para que no vuelvan a suceder llegó a Uruguay Easy Charge!!!.</p>
-              <p>Easy Charge es un dispositivo portátil que permite cargar la batería de hasta 8 smartphones a la vez, además de contar con una pantalla LED integrada que funciona como un vehículo de comunicación.</p>
+              <p>Easy Charge es un dispositivo portátil que permite cargar la batería de hasta 8 smartphones a la vez, además de contar con una pantalla LCD integrada que funciona como un vehículo de comunicación.</p>
             </div>
           </div>
           <div class="flex_content_doble publicidad">
@@ -235,6 +235,13 @@
                     <div class="form-group">
                       <button type="submit" class="btn">Enviar</button>
                     </div>
+                    <div class="messgmodal">
+                      <div class="flex">
+                        <div class="flex_item">
+                          <div class="spinner"></div>
+                        </div>
+                      </div>
+                    </div>
                   </form>
                 </div>
                 <div class="left">
@@ -242,7 +249,7 @@
                   <ul class="direccion">
                     <li>
                       <b>Dirección:</b>
-                      Blanca del Tabaré 2945 Apto 602
+                      Blanca del Tabaré 2945
                     </li>
                     <li>
                       <b>Teléfono:</b>
