--- a/anunciate.html
+++ b/anunciate.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="txt">                  
                   <h1>
-                    <span>Anúnciate con nosotros</span>
+                    <span>Anunciate con nosotros</span>
                   </h1>
                   <div class="cont_btn">
                     <a href="#primer_contenido" class="btn">Conoce más</a>
@@ -62,7 +62,7 @@
               Easy Charge es un dispositivo moderno y práctico donde publicitar.
               <br>
               <br>
-              Tu marca, producto y/o servicio se exibirá en bares, restaurantes, centros de estética, gimnasios y otros establecimientos de primer nivel en el Uruguay.
+              Tu marca, producto y/o servicio se exhibirá en la pantalla de los equipos Easy Charge en bares, restaurantes, centros de estética, gimnasios y otros establecimientos de primer nivel en el Uruguay.
               <br>
               <br>
               Anunciar en Easy Charge es colocar tu marca en una experiencia memorable y llamativa para el público.
@@ -107,10 +107,10 @@
             </div>
             <!-- HACER PASOS -->
             <p class="quote_text">
-              ¿Como funciona?
+              ¿Cómo funciona?
               <br>
               <br>
-              Anunciar en EasyCharge es sencillo y rápido, solo tienes que llenar el formulario y le responderemos a la brevedad.
+              Anunciar en EasyCharge es sencillo y rápido, solo tenés que llenar el formulario y te responderemos a la brevedad.
               </p>
 
           </div>
