--- a/ec_rent.html
+++ b/ec_rent.html
@@ -60,7 +60,7 @@
           <div class="col-md-12">
             <div class="quote_text">
               <h2>Easy Charge Rent</h2>
-              Consiste en otorgar al establecimiento en modalidad de arrendamiento la cantidad de equipo que se considere necesario, exibiendo en los mismo lo que el negocio desee: menú, ofertas y públicidades.
+              Consiste en otorgar al establecimiento en modalidad de arrendamiento la cantidad de equipos que se considere necesario, exhibiendo en los mismos lo que el negocio desee: menú, ofertas y públicidades.
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
             </div>
             <div class="left">
               <h2>¿Queres formar parte de nuestra alianza?</h2>
-              <p>Si tenes un restaurante, bar, centro de estética, gimnasio o establecimiento en donde tus clientes necesiten cargar sus celulares y dispositivos moviles contáctanos y disfruta de la experiencia única de Easy Charge.</p>
+              <p>Si tenes un restaurante, bar, centro de estética, gimnasio o establecimiento en donde tus clientes necesiten cargar sus celulares y dispositivos móviles contactanos y disfrutá de la experiencia única de Easy Charge.</p>
               <div class="cont_btn">
                 <a href="#contacto" class="btn">Contactanos</a>
               </div>
