--- a/ec_show.html
+++ b/ec_show.html
@@ -150,6 +150,15 @@
                   </figcaption>
                 </figure>
               </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/pepito_bar.jpg" alt="">
+                  <figcaption>
+                    <h2>Pepito Bar</h2>
+                    <p>Guipúzcoa 447</p>
+                  </figcaption>
+                </figure>
+              </div>
 
             </div>
           </div>
@@ -166,7 +175,7 @@
             </div>
             <div class="left">
               <h2>¿Queres formar parte de nuestra alianza?</h2>
-              <p>Si tenes un restaurante, bar, centro de estética, gimnasio o establecimiento en donde tus clientes necesiten cargar sus celulares y dispositivos moviles contáctanos y disfruta de la experiencia única de Easy Charge.</p>
+              <p>Si tenes un restaurante, bar, centro de estética, gimnasio o establecimiento en donde tus clientes necesiten cargar sus celulares y dispositivos móviles contactanos y disfrutá de la experiencia única de Easy Charge.</p>
               <div class="cont_btn">
                 <a href="#contacto" class="btn">Contactanos</a>
               </div>
