--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
             </div>
             <div class="left">
               <h2>¿Qué es EasyCharge?</h2>
-              <p>Imaginate estar disfrutando una linda reunión entre amigos y en el momento de sacarse una fotografía para retratar el momento te quedas sin batería en el celular.</p>
+              <p>Imaginate estar disfrutando una linda reunión entre amigos y en el instante de sacarse una fotografía para retratar el momento te quedas sin batería en el celular.</p>
               <p>Piensa estar tomando un café mientras esperas esa importante llamada de negocios y que tu teléfono se quede sin carga.</p>
-              <p>¿A quíen no le ha pasado estas situaciones?, para que no vuelvan a suceder llegó a Uruguay Easy Charge!!!.</p>
+              <p>¿A quién no le ha pasado estas situaciones?, para que no vuelvan a suceder llegó a Uruguay Easy Charge!!!.</p>
               <p>Easy Charge es un dispositivo portátil que permite cargar la batería de hasta 8 smartphones a la vez, además de contar con una pantalla LCD integrada que funciona como un vehículo de comunicación.</p>
             </div>
           </div>
           <div class="flex_content_doble publicidad">
             <div class="right">
-              <h2>¿Que ofrecemos?</h2>
+              <h2>¿Qué ofrecemos?</h2>
               <p>Easy Charge brinda un servicio gratuito de carga para smartphones y dispositivos móviles, de una manera rápida, cómoda y segura.</p>
             </div>
             <div class="left">
@@ -89,7 +89,7 @@
         <div class="container">
           <div class="col-md-12">
             <div class="text-center">
-              <h2>Caracteristicas de Easy Charge</h2>
+              <h2>Características de Easy Charge</h2>
             </div>
             <div class="flex_container_description">
               <div class="flex_item">
@@ -97,7 +97,7 @@
                   <img src="img/icon/tech/phones_x8.svg" alt="">
                   <figcaption>
                     <h2>Hasta 8 dispositivos</h2>
-                    <p>Permite recargar hasta 8 smartphones y dispositivos moviles a la vez.</p>
+                    <p>Permite recargar hasta 8 smartphones y dispositivos móviles a la vez.</p>
                   </figcaption>
                 </figure>
               </div>
@@ -106,8 +106,8 @@
                 <figure class="tech_item" id="batery">
                   <img src="img/icon/tech/battery.svg" alt="">
                   <figcaption>
-                    <h2>Bateria</h2>
-                    <p>Bateria interna de 20800 mAh con funcionamiento ininterrumpido de 7 horas.</p>
+                    <h2>Batería</h2>
+                    <p>Batería interna de 20800 mAh con funcionamiento ininterrumpido de 7 horas.</p>
                   </figcaption>
                 </figure>
               </div>
@@ -130,8 +130,8 @@
                 <figure class="tech_item" id="player">
                   <img src="img/icon/tech/player.svg" alt="">
                   <figcaption>
-                    <h2>Reproductor de vídeo e imágenes</h2>
-                    <p>Reproductor de imágenes (JPG, GIF, BMP y PNG) y vídeo (MP4, WMV, MOV y AVI)</p>
+                    <h2>Reproductor de video e imágenes</h2>
+                    <p>Reproductor de imágenes (JPG, GIF, BMP y PNG) y video (MP4, WMV, MOV y AVI)</p>
                   </figcaption>
                 </figure>
               </div>
