cambios agregado de mapas

--- a/ec_show.html
+++ b/ec_show.html
@@ -152,7 +152,7 @@
               </div>
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/logo/pepito_bar.jpg" alt="">
+                  <img src="img/icon/logo/pepito.jpg" alt="">
                   <figcaption>
                     <h2>Pepito Bar</h2>
                     <p>Guipúzcoa 447</p>
