--- a/anunciate.html
+++ b/anunciate.html
@@ -165,7 +165,7 @@
           <div class="col-md-12">
             <div class="cont_map">
               <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13085.099296879598!2d-56.16772330784963!3d-34.92464388604025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f819e0be26dff%3A0x5721a12a2943bc00!2sPunta+Carretas%2C+Montevideo!5e0!3m2!1ses-419!2suy!4v1495585762275" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/d/embed?mid=1iIXj6dESsq7RjBYCjYjkpkzbYv0&hl=es-419"></iframe>
               </div>
             </div>
           </div>
