--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
                 <div class="flex_item">
                   <figure><img src="img/gallery/photo_3.jpg" class="img-responsive" alt=""></figure>
                 </div>
+                <div class="flex_item">
+                  <figure><img src="img/gallery/photo_5.jpg" class="img-responsive" alt=""></figure>
+                </div>
+                <div class="flex_item">
+                  <figure><img src="img/gallery/photo_6.jpg" class="img-responsive" alt=""></figure>
+                </div>
               </div>
             </div>
 
@@ -199,7 +205,7 @@
           <div class="col-md-12">
             <div class="cont_map">
               <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13085.099296879598!2d-56.16772330784963!3d-34.92464388604025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f819e0be26dff%3A0x5721a12a2943bc00!2sPunta+Carretas%2C+Montevideo!5e0!3m2!1ses-419!2suy!4v1495585762275" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/d/embed?mid=1iIXj6dESsq7RjBYCjYjkpkzbYv0&hl=es-419"></iframe>
               </div>
             </div>
           </div>
@@ -285,6 +291,7 @@
         </div>
       </footer>
 
+      <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBP7LF7pdN-KAHAcw2yeeKYSnaNkhUileU&callback=initMap"></script> -->
       <script src="js/vendor/jquery-1.11.2.min.js"></script>
       <script src="js/main.js"></script>
     </body>
