--- a/ec_show.html
+++ b/ec_show.html
@@ -39,7 +39,7 @@
                     <span>EASY CHARGE SHOW</span>
                   </h1>
                   <div class="cont_btn">
-                    <a href="#" class="btn">Conoce más</a>
+                    <a href="index.html#easycharge" class="btn">Conoce más</a>
                   </div>
                 </div>
                 <div class="img">
@@ -143,10 +143,10 @@
 
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/logo/anna_cafe.jpg" alt="">
+                  <img src="img/icon/logo/one_love.jpg" alt="">
                   <figcaption>
-                    <h2>Anna Café</h2>
-                    <p>Guipúzcoa 447</p>
+                    <h2>One Love</h2>
+                    <p>José María Montero 2683</p>
                   </figcaption>
                 </figure>
               </div>
@@ -155,7 +155,7 @@
                   <img src="img/icon/logo/pepito.jpg" alt="">
                   <figcaption>
                     <h2>Pepito Bar</h2>
-                    <p>Guipúzcoa 447</p>
+                    <p>Pedro F. Berro 1231</p>
                   </figcaption>
                 </figure>
               </div>
