--- a/anunciate.html
+++ b/anunciate.html
@@ -5,9 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>EasyCharge - Mantenete conectado</title>
         <meta name="description" content="">
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/responsive.css">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
         <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
@@ -15,6 +16,16 @@
 
       <header>
         <div class="container">
+          <div class="menu_mobile">
+            <a class="logo_" href="index.html">
+              <img src="img/logo-battery-white.svg" alt="">
+            </a>
+            <a class="btn_menu js_btn_menu" href="#">
+              <span></span>
+              <span></span>
+              <span></span>
+            </a>
+          </div>
           <nav id="menu">
             <ul>
               <li class="logo"><a href="index.html"><img src="img/logo-battery-white.svg" alt=""></a></li>
