--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>EasyCharge - Mantenete conectado</title>
         <meta name="description" content="">
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/responsive.css">
@@ -16,6 +16,16 @@
 
       <header>
         <div class="container">
+          <div class="menu_mobile">
+            <a class="logo_" href="index.html">
+              <img src="img/logo-battery-white.svg" alt="">
+            </a>
+            <a class="btn_menu js_btn_menu" href="#">
+              <span></span>
+              <span></span>
+              <span></span>
+            </a>
+          </div>
           <nav id="menu">
             <ul>
               <li class="logo"><a href="index.html"><img src="img/logo-battery-white.svg" alt=""></a></li>
