--- a/ec_show.html
+++ b/ec_show.html
@@ -7,8 +7,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/responsive.css">
+        <link rel="stylesheet" href="css/main.css?v=1.1">
+        <link rel="stylesheet" href="css/responsive.css?v=1.1">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
         <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
@@ -275,6 +275,6 @@
       </footer>
 
       <script src="js/vendor/jquery-1.11.2.min.js"></script>
-      <script src="js/main.js"></script>
+      <script src="js/main.js?v=1.1"></script>
     </body>
 </html>
