--- a/ec_rent.html
+++ b/ec_rent.html
@@ -2,10 +2,15 @@
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>EasyCharge - Mantenete conectado</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="theme-color" content="#02B4B6">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
+        <meta name="description" content="Easy Charge es un dispositivo portátil que permite cargar la batería de hasta 8 smartphones a la vez, además de contar con una pantalla LCD integrada que funciona como un vehículo de comunicación">
+        <meta name="keywords" content="cargador, uruguay, publicidad, montevideo, portatil, eventos, iphone, android, pantalla, power, bank, usb, locales, negocios, pub, boliches" />
+        <meta name="author" content="EasyCharge Uruguay">
+        <title>Easy Charge - Mantenete conectado</title>
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css?v=1.1">
         <link rel="stylesheet" href="css/responsive.css?v=1.1">
@@ -226,7 +231,16 @@
           </div>
         </div>
       </footer>
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+        ga('create', 'UA-97822155-1', 'auto');
+        ga('send', 'pageview');
+
+      </script>
       <script src="js/vendor/jquery-1.11.2.min.js"></script>
       <script src="js/main.js?v=1.1"></script>
     </body>
