--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     No te preocupes, quedarte sin batería es cosa del pasado.
                   </h1>
                   <div class="cont_btn">
-                    <a href="#" class="btn">Conoce más</a>
+                    <a href="#easycharge" class="btn">Conoce más</a>
                   </div>
                 </div>
                 <div class="img">
