--- a/ec_show.html
+++ b/ec_show.html
@@ -55,7 +55,7 @@
                     <span>EASY CHARGE SHOW</span>
                   </h1>
                   <div class="cont_btn">
-                    <a href="index.html#easycharge" class="btn">Conoce más</a>
+                    <a href="#show" class="btn">Conoce más</a>
                   </div>
                 </div>
                 <div class="img">
@@ -71,7 +71,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="show">
         <div class="container">
           <div class="col-md-12">
             <div class="quote_text">
@@ -88,7 +88,7 @@
             <div class="text-center">
               <h2>¿Por qué tener Easy Charge en tu establecimiento?</h2>
             </div>
-            <div class="flex_container_description" style="margin:100px 0">
+            <div class="flex_container_description content_2" style="margin:100px 0">
 
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
@@ -103,6 +103,15 @@
                 <figure class="tech_item" id="eight_gagdet">
                   <figcaption>
                     <div class="number logo_circulo">2</div>
+                    <p>Además de ofrecer la practicidad de un cargador portátil de celulares puedes usar Easy Charge para exhibir a tus clientes menús, promociones, ofertas o hasta publicidades que aumenten tu facturación.</p>
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <figcaption>
+                    <div class="number logo_circulo">3</div>
                     <p>Significa un valor agregado para tu negocio, diferenciándolo de la competencia y atrayendo clientela a tu establecimiento.</p>
                   </figcaption>
                 </figure>
@@ -111,7 +120,7 @@
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
                   <figcaption>
-                    <div class="number logo_circulo">3</div>
+                    <div class="number logo_circulo">4</div>
                     <p>Es una vía de comunicación para exhibir todo tipo de contenidos.</p>
                   </figcaption>
                 </figure>
