--- a/ec_show.html
+++ b/ec_show.html
@@ -181,6 +181,35 @@
                   <figcaption>
                     <h2>Pepito Bar</h2>
                     <p>Pedro F. Berro 1231</p>
+                    <p>Colonia 2000</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/secreto_igor.jpg" alt="">
+                  <figcaption>
+                    <h2>El Secreto de Igor</h2>
+                    <p>Guipuzcoa 318</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/patagonia.jpg" alt="">
+                  <figcaption>
+                    <h2>Patagonia Brewing Co.</h2>
+                    <p>Luis Alberto de Herrera 1193</p>
+                    <p>Buenos Aires 653</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/media_lunas.jpg" alt="">
+                  <figcaption>
+                    <h2>Patagonia Brewing Co.</h2>
+                    <p>21 de Setiembre 2982</p>
                   </figcaption>
                 </figure>
               </div>
