--- a/ec_show.html
+++ b/ec_show.html
@@ -208,7 +208,7 @@
                 <figure class="tech_item" id="eight_gagdet">
                   <img src="img/icon/logo/media_lunas.jpg" alt="">
                   <figcaption>
-                    <h2>Patagonia Brewing Co.</h2>
+                    <h2>Medialunas Calentitas</h2>
                     <p>21 de Setiembre 2982</p>
                   </figcaption>
                 </figure>
