agregado de locales y fix responsive

--- a/ec_show.html
+++ b/ec_show.html
@@ -214,6 +214,25 @@
                 </figure>
               </div>
 
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/dakota.jpg" alt="">
+                  <figcaption>
+                    <h2>Dakota SteakHouse & Bar</h2>
+                    <p>21 de Setiembre 2752</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/bhaley.jpg" alt="">
+                  <figcaption>
+                    <h2>B.Haley</h2>
+                    <p>Manuel Vicente Pagola 3246</p>
+                  </figcaption>
+                </figure>
+              </div>
+
             </div>
           </div>
         </div>
