--- a/ec_show.html
+++ b/ec_show.html
@@ -12,8 +12,8 @@
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/main.css?v=1.2">
-        <link rel="stylesheet" href="css/responsive.css?v=1.2">
+        <link rel="stylesheet" href="css/main.css?v=1.3">
+        <link rel="stylesheet" href="css/responsive.css?v=1.3">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
         <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
@@ -229,6 +229,24 @@
                   <figcaption>
                     <h2>B.Haley</h2>
                     <p>Manuel Vicente Pagola 3246</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/taberna_diablo.jpg" alt="">
+                  <figcaption>
+                    <h2>La Taberna del Diablo</h2>
+                    <p>Av. Gonzalo Ramírez 2051</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/cala_hotel.jpg" alt="">
+                  <figcaption>
+                    <h2>Cala di Volpe Boutique Hotel</h2>
+                    <p>Parva Domus 2531</p>
                   </figcaption>
                 </figure>
               </div>
